--- a/demo/src/main/resources/com/example/demo/TeacherDashboard.fxml
+++ b/demo/src/main/resources/com/example/demo/TeacherDashboard.fxml
@@ -5,13 +5,75 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <AnchorPane prefHeight="400.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.TeacherDashboardController">
    <children>
-      <Label fx:id="teacherName" layoutX="183.0" layoutY="51.0" text="Teacher Dashboard">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Button fx:id="teacherDashCancel" layoutX="185.0" layoutY="174.0" mnemonicParsing="false" onAction="#Logout" prefHeight="25.0" prefWidth="154.0" style="-fx-background-color: #263F73;" text="Log Out" textFill="WHITE" />
+      <AnchorPane fx:id="teacherDashPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" AnchorPane.leftAnchor="180.0">
+         <children>
+            <Label fx:id="teacherName" layoutX="74.0" layoutY="14.0" text="Teacher Dashboard">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="attendancePane" layoutX="180.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false">
+         <children>
+            <Label fx:id="studentName1" layoutX="74.0" layoutY="14.0" text="Update Attendance">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="attendanceMenu" layoutX="120.0" layoutY="60.0" prefWidth="200.0" promptText="Choose Course and Section" />
+            <DatePicker fx:id="attendanceDate" layoutX="120.0" layoutY="95.0" prefWidth="150.0" promptText="Choose Date" />
+            <Button fx:id="PopualateStudents" layoutX="120" layoutY="130" text="Populate Students" onAction="#ShowStudents"/>
+            <TableView fx:id="attendanceTable" layoutY="165.0" prefHeight="323.0" prefWidth="340.0">
+               <columns>
+
+                  <TableColumn fx:id="RollNo" prefWidth="115.99996948242188" text="Roll No" />
+                  <TableColumn fx:id="markedAttendance" prefWidth="118.6666259765625" text="Present" />
+                  <TableColumn fx:id="absentAttendance" prefWidth="104.66671752929688" text="Absent" />
+               </columns>
+            </TableView>
+         </children>
+      </AnchorPane>
+      <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="180.0" style="-fx-background-color: #263F73;">
+         <children>
+            <Label layoutX="45.0" layoutY="23.0" text="Teacher" textFill="WHITE">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Label>
+            <Button fx:id="teacherDashLogout" layoutX="18.0" layoutY="242.0" mnemonicParsing="false" onAction="#Logout" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Log Out" textFill="#263f73">
+               <font>
+                  <Font name="Calibri" size="15.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button fx:id="teacherDashBtn" layoutX="18.0" layoutY="90.0" mnemonicParsing="false" onAction="#dashboardPane" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Dashboard" textFill="#263f73">
+               <font>
+                  <Font name="Calibri" size="15.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button fx:id="attendanceBtn" layoutX="18.0" layoutY="140.0" mnemonicParsing="false" onAction="#attendancePane" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Attendance" textFill="#263f73">
+               <font>
+                  <Font name="Calibri" size="15.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+         </children>
+      </AnchorPane>
+
    </children>
 </AnchorPane>
